--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-pomodoro-timer (0.1) demo; urgency=medium
+pomodoro-timer (0.1) UNRELEASED; urgency=medium
 
-  * Initial release. (Closes: #XXXXXX)
+  * Initial release. (Closes: #1)
+  * This is my first Debian package.
 
  -- Evgeniy Asvatov <evgeniy.asvatov@phystech.edu>  Sun, 09 Jun 2019 00:35:24 +0300
